# reddmind

./: README.md  config.yml  pyproject.toml  setup.cfg
data/: fixtures.py  movies.csv
reddmind/: __main__.py  containers.py  entities.py  finders.py  listers.py  main.py  writers.py
tests/: test_containers.py  test_entities.py
