[tool.poetry]
name = "reddmind"
version = "0.1.0"
description = ""
authors = ["Riley <rileymshea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wemake-python-styleguide = "^0.15.2"
dependency-injector = "^4.31.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
PyYAML = "^5.4.1"
litecli = "^1.6.0"

[tool.poetry.scripts]
reddmind = "reddmind.main:app"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
black = "^20.8b1"
typer = { extras = ["all"], version = "^0.3.2" }
praw = "^7.2.0"
pynvim = "^0.4.3"
mypy = "^0.812"
pytest = "^6.2.2"
hypothesis = "^6.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
